# xo

./: .gitignore  README.md  libforward-tc.tgz
ceph/: README.md  ceph_xo.patch  create_buckets.py  create_objects.py  list_buckets.py  setup_ceph.md
ceph/libforward-tc/ebpf/: ebpf_redirect_block.c  load.sh
ceph/libforward-tc/include/: forward.h
ceph/libforward-tc/include/private/: common.h
ceph/libforward-tc/src/: main.c  netlink_forward.c
ceph/xo-object-gateway/: CMakeLists.txt  README.md
ceph/xo-object-gateway/cmake/modules/: Findlibrados2.cmake
ceph/xo-object-gateway/src/: http_client.c  server.c
microbenchmark/: Makefile  README.md  bpf_ins.c  config  example.crt  info_to_migrate.pb-c.h  nic_test_tc.sh  proxy.c  runxo.sh  server.c  tc_ins.c  tchw_ins_loader.sh  tlse.h
microbenchmark/ebpfprog/: 35loader.sh  Makefile  ebpfloader.sh  server.c
microbenchmark/libforward-tc/: CMakeLists.txt  Makefile  README.md
microbenchmark/libforward-tc/ebpf/: build.sh  ebpf_redirect_block.c  load.sh
microbenchmark/libforward-tc/include/: ebpf_forward.h  forward.h
microbenchmark/libforward-tc/include/private/: common.h
microbenchmark/libforward-tc/src/: ebpf_forward.c  insertion_benchmark.cc  netlink_forward.c
nginx/: README.md
nginx/libforward-tc/: CMakeLists.txt
nginx/libforward-tc/ebpf/: load.sh
nginx/libforward-tc/src/: ebpf_forward.c  netlink_forward.c
nginx/nginx/: ebpf_redirect_block_load.sh  reset.sh
nginx/nginx/auto/: modules  sources
nginx/nginx/auto/cc/: clang  gcc
nginx/nginx/conf/: baseline_backend.conf  baseline_frontend.conf  xo.conf
nginx/nginx/modules/ngx_http_handoff_module/: config  connect.c  connect.h  handoff_in.c  handoff_in.h  handoff_out.c  handoff_out.h  ngx_http_handoff_module.c  ngx_http_handoff_module.h
nginx/nginx/src/core/: nginx.c  ngx_connection.c  ngx_connection.h
nginx/nginx/src/event/: handoff.c  handoff.h  http_client.c  http_client.h  ngx_event_accept.c  ngx_event_connect.c  queue.c  queue.h  socket_serialize.pb-c.c  socket_serialize.pb-c.h  tls.c  tls.h  util.c  util.h
nginx/nginx/src/http/: ngx_http_core_module.c  ngx_http_request.c  ngx_http_request_body.c  ngx_http_script.c  ngx_http_upstream.c
nginx/nginx/src/http/modules/: ngx_http_proxy_module.c
xo-server/: README.md  bpf_ins_loader.sh  compile_proxy.sh  config_example  example.key  info_to_migrate.pb-c.c  makefile_hw_hybrid_ebpf  run_multiservers.sh  runxo.sh  s.c  server.sh  tcsw_ins_loader.sh  tlse.c
xo-server/ebpfprog/: README.md  ebpf_modify_srcip.c  ebpf_redirect_block.c  loader.sh
